# 10kgp

./: .gitignore  CMakeLists.txt  README.md  header.h  main.c  main.h  win_compat.h  win_header.h  win_stdin.c  win_stdin.h
.github/workflows/: pages.yml
emit/: README.md  emit.c  emit.h  emit_bcast.c  emit_bcast.h  emit_diag.h  emit_lan_scan.c  emit_lan_scan.h  emit_mcast.c  emit_mcast.h  emit_sock.h  win_emit.c  win_emit.h
pages/: architecture.html  build.html  discovery.html  index.html  persi.html  run.html
persi/: demo.c  persi.h  persi_core.c  persi_format.c  persi_private.h  persi_sql.c  persi_value.c
